stremio-jackett/service-elfhosted-internal.stremio-jackett.yaml
apiVersion: v1
kind: Service
metadata:
  name: elfhosted-internal
  namespace: stremio-jackett
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/name: stremio-jackett
  sessionAffinity: None
  type: ClusterIP
