stremio-jackett/ingressroute-stremio-jackett.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stremio-jackett.${dns_domain}
  namespace: stremio-jackett
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stremio-jackett.${dns_domain}`) && (PathPrefix(`/configure`) || PathPrefix(`/manifest.json`))
      kind: Rule
      services:
        - name: stremio-jackett
          kind: Service
          port: 3000
      middlewares:  
        - name: chain-public-stremio-addon-static
          namespace: traefik  
    - match: Host(`stremio-jackett.${dns_domain}`)
      kind: Rule
      services:
        - name: stremio-jackett
          kind: Service
          port: 3000
      middlewares:  
        - name: chain-public-stremio-addon
          namespace: traefik
